2003-08-12  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXMenu.c: fixed C99'ism that breaks gcc 2.95.

2003-07-21  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.4 TAGGED FOR RELEASE ***

	* changes: updated for 8.4.4 release

2003-07-20  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/buildTkConfig.tcl: fix to TK_BUILD_* ref generation
	broken by changes to tcl buildsystem.

2003-07-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/scale.tcl: Fix for bug 706765 to correctly handle the 
	-sliderrelief option while moving the thumb.

2003-07-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixFont.c (Tk_DrawChars): do not make XGetGeometry call
	that prevents overwidth lines as it requires a roundtrip call to
	the X server for every string drawn.  Hard-code max width to 32768
	until a beter solution to get max width is made.

	* library/panedwindow.tcl: use widget-specific Priv slots for
	pwAfterId and panecursor items to correctly handle cursor changes
	with adjacant panedwindows.

	* generic/tkEvent.c (Tk_HandleEvent): correct XCreateIC call for
	TK_XIM_SPOT usage. [Bug 742660] (takahashi)

	* win/tkWinCursor.c (TkGetCursorByName): Fix bug 420510 to provide
	consistency between unix and windows -cursor option. (thoyts)

	* win/tkWinDialog.c: doubled the TK_MULTI_MAX_PATH value to ~10K.
	This is a short-term solution until the -multiple option is
	extended.  [Bug 641261]

2003-07-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/panedwindow.test (panedwindow-30.2): 
	* generic/tkPanedWindow.c (Tk_PanedWindowObjCmd): Ensure that we
	can share GCs between a panedwindow and its sash proxy, even if
	the panedwindow is in a toplevel with a different visual. [Bug 702230]

2003-07-17  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: Changes for new tcl buildsystem.

	* macosx/Wish.pbproj/jingham.pbxuser:
	* macosx/Wish.pbproj/project.pbxproj:
	Changes for new tcl buildsystem.